<resources>
    <string name="app_name">PicPicker</string>
    <string name="btn_done">完成</string>
    <string name="btn_confirm_delete">确认删除</string>
    <string name="btn_cancel_all">撤销全部</string>
    <string name="no_photos">暂无照片</string>
    <string name="delete_confirm_title">确认删除</string>
    <string name="delete_confirm_message">确定要删除选中的照片吗？</string>
    <string name="create_folder">新建收藏夹</string>
    <string name="enter_folder_name">请输入收藏夹名称</string>
    <string name="error_permission">请开启存储权限</string>
    <string name="error_no_photos">没有找到照片</string>
    <string name="home_subtitle">打乱时间线，每一次滑动都是惊喜</string>
    <string name="start_browse">开始浏览</string>
    <string name="start_browse_desc">上滑删除 · 下滑收藏 · 左右切换</string>
    <string name="start_batch_browse">一组浏览</string>
    <string name="start_batch_browse_desc">随机抽取20张为一组,轻快便捷</string>
    <string name="view_favorites">我的收藏</string>
    <string name="no_favorites_yet">还没有收藏的照片</string>
    <string name="favorite_count">已收藏 %d 张照片</string>
    <string name="review_delete_title">确认要删除的照片(%d 张)</string>
    <string name="deleted_count">已删除 %d 张照片</string>
    <string name="favorites_title">收藏夹(%d 张)</string>
    <string name="btn_back_home">返回主页</string>
    <string name="batch_complete_title">本组已全部浏览</string>
    <string name="batch_next_group">再来一组</string>
    <string name="batch_finish">完成</string>
    <string name="marked_for_delete">已标记为待删除</string>
    <string name="added_to_favorites">已添加到收藏夹</string>
    <string name="unfavorited">已取消收藏</string>
    <string name="unfavorited_empty">已取消收藏，收藏夹为空</string>
    <string name="photo_taken_time">拍摄时间</string>
    <string name="photo_taken_location">拍摄位置</string>
    <string name="photo_info_unknown">未知</string>
    <string name="btn_open_in_gallery">在相册中查看</string>
    <string name="gesture_tutorial_title">手势操作指南</string>
    <string name="gesture_swipe_up">上滑</string>
    <string name="gesture_swipe_up_desc">标记为待删除，浏览结束后统一确认</string>
    <string name="gesture_swipe_down">下滑</string>
    <string name="gesture_swipe_down_desc">收藏该照片，自动跳到下一张</string>
    <string name="gesture_swipe_left_right">左右滑动</string>
    <string name="gesture_swipe_left_right_desc">切换浏览上一张 / 下一张照片</string>
    <string name="gesture_long_press">长按</string>
    <string name="gesture_long_press_desc">查看照片的拍摄时间、位置等详细信息</string>
    <string name="gesture_tutorial_hint">点击空白处关闭</string>
    <string name="gesture_swipe_down_unfav_desc">取消收藏该照片，从收藏夹中移除</string>
</resources>
